0.55 (2010-03-27)

	* Added a bunch of links to http://contributing.appspot.com/shipit

	* Bunch of patches from the community all over the place... See
	  version control history, linked off the Contributing URL above.
	  (we should phase out this changelog, or make it just be the git
	   log....)

0.53 (2009-12-15)

	* Mercurial support

	* Module::Build support

	* current_version_from_makefilepl() now also recognizes 'reference_module'
          from Module::Install::ReadmeMarkdownFromPod
	
0.52 (2008-05-10)

	* Added VC::Git (Yann)
	* Hacked around an issue where svk blocks on STDIN if you don't have a
	  depot map initialized (Yann)

0.51 (2007-06-18)

	* Fixed VC::SVK to work with absolute path in tagpattern (Kang-Min Liu)

0.50
        * --skip-tests option, for when tests are long and a step after DistTest fails,
	  so next time around you can run shipit faster.  use is discouraged.

	* fix MakeMaker manicheck to ignore META.yml and inc/ directory for Module::Install

	* Make Perl::ModuleBuild actually work. You need to add .shipit to MANIFEST.SKIP
	  to prevent disttest from failing (miyagawa)

0.49
	* ProjectType::Perl now works with Makefile.PL that uses Module::Install

0.48
	* new step: AddToSVNDir
        * skip commit step if there is nothing to commit
0.47
	* lot more/updated docs
0.46
	* svk support from Tatsuhiko Miyagawa
0.45
	* fix ChangeVersion (which was doing nothing) when VERSION (not
	  VERSION_FROM) was in Makefile.PL
	* make the anti-compulsive don't-run-me-code smarter
0.44
	* make UploadCPAN fail earlier if MakeDist wasn't done.
	* make ProjectType::MakeMaker's disttest ignore the .shipit file,
	  so you don't need to put it in MANIFEST.SKIP (which is often the only
	  thing it contains, in addition to all the boilerplate stuff)
	* don't upload to CPAN in dry-run mode
	* ProjectType::AutoConf support (releases memcached, at least)

0.43
	* default config as written out with --write-config had syntax error,